boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_callback_bridge_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
private object WidgetEventsHandleMap {
    private val map = mutableMapOf<Long, WidgetEvents>()
    private var nextHandle: Long = 1L

    fun insert(callback: WidgetEvents): Long {
        val handle = nextHandle
        nextHandle += 1L
        map[handle] = callback
        return handle
    }

    fun get(handle: Long): WidgetEvents? = map[handle]

    fun remove(handle: Long): WidgetEvents? = map.remove(handle)
}

object WidgetEventsBridge {
    fun retain(callback: WidgetEvents): Long = WidgetEventsHandleMap.insert(callback)

    fun release(handle: Long) {
        WidgetEventsHandleMap.remove(handle)
    }

    /**
     * Called when widget updates.
     */
    fun on_update(handle: Long, value: Int) {
        val callback = WidgetEventsHandleMap.get(handle) ?: return
        callback.onUpdate(value)
    }


}
