boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_callback_bridge_template_with_async_method.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
private object WidgetEventsHandleMap {
    private val map = mutableMapOf<Long, WidgetEvents>()
    private var nextHandle: Long = 1L

    fun insert(callback: WidgetEvents): Long {
        val handle = nextHandle
        nextHandle += 1L
        map[handle] = callback
        return handle
    }

    fun get(handle: Long): WidgetEvents? = map[handle]

    fun remove(handle: Long): WidgetEvents? = map.remove(handle)
}

object WidgetEventsBridge {
    private val pendingAsyncCallbacks = mutableMapOf<Long, Long>()
    private val asyncCallbackScope = kotlinx.coroutines.CoroutineScope(
        kotlinx.coroutines.SupervisorJob() + kotlinx.coroutines.Dispatchers.Default
    )

    fun retain(callback: WidgetEvents): Long = WidgetEventsHandleMap.insert(callback)

    fun release(handle: Long) {
        WidgetEventsHandleMap.remove(handle)
    }

    /**
     * Called when async callback completes.
     */
    fun on_complete(handle: Long, value: Int, callbackPtr: Long, callbackData: Long) {
        val callback = WidgetEventsHandleMap.get(handle) ?: run {
            __native_callback_invokeAsyncCallbackI32Failure(callbackPtr, callbackData)
            return
        }
        pendingAsyncCallbacks[callbackData] = callbackPtr
        asyncCallbackScope.launch {
            try {
                val result = callback.onComplete(value)
                completeOnComplete(callbackData, result)
            } catch (_: Throwable) {
                failOnComplete(callbackData)
            }
        }
    }

    private fun completeOnComplete(callbackData: Long, result: Int) {
        val callbackPtr = pendingAsyncCallbacks.remove(callbackData) ?: return
        __native_callback_invokeAsyncCallbackI32(callbackPtr, callbackData, result)
    }

    private fun failOnComplete(callbackData: Long) {
        val callbackPtr = pendingAsyncCallbacks.remove(callbackData) ?: return
        __native_callback_invokeAsyncCallbackI32Failure(callbackPtr, callbackData)
    }


}
