boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_callback_trait_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * Widget callback interface.
 */
interface WidgetEvents {
    /**
     * Called when widget updates.
     */
    fun onUpdate(value: Int)

}
