boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_cinterop_def_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
# Generated by BoltFFI. Do not edit.
headers = demo.h
package = com.example.demo.native
linkerOpts = -ldemo
