boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_class_actual_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * A handle-backed widget.
 */
actual class Widget private constructor(private val handle: Long) {
    /**
     * Creates a widget.
     */
    constructor(name: String) : this(__native_class_boltffi_widget_new(name))
    /**
     * Renames the widget.
     */
    fun rename(name: String) = __native_class_boltffi_widget_rename(handle, name)

}
