boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_class_common_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * A handle-backed widget.
 */
expect class Widget private constructor(handle: Long) {
    /**
     * Creates a widget.
     */
    constructor(name: String)
    /**
     * Renames the widget.
     */
    fun rename(name: String)
    /**
     * Watches widget updates.
     */
    fun updates(): Flow<Int>

}
