boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_common_main_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
package com.example.demo

expect object DemoKmp {
expect fun echoI32(value: Int): Int
expect suspend fun fetchName(id: Long): String

}
