boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_enum_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * The result of an operation.
 */

sealed class Result {
    /**
     * Operation succeeded.
     */
    data object Success : Result()
    /**
     * Operation failed.
     */
    data class Error(val message: String) : Result()
}

fun Result.wireEncodedSize(): Int = 4 + when (this) {
    is Success -> 0
    is Error -> 0
}

fun Result.wireEncodeTo(wire: boltffiWireWriter) {
    when (this) {
        is Success -> wire.writeI32(0)
        is Error -> wire.writeI32(1)
    }
}
