boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_enum_template_c_style.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
assertion_line: 1203
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * Current status.
 */

enum class Status(val value: Int) {
    /**
     * No work in progress.
     */
    Idle(0),
    /**
     * Work is in progress.
     */
    Running(1);
}

fun Status.wireEncodedSize(): Int = 4

fun Status.wireEncodeTo(wire: boltffiWireWriter) {
    wire.writeI32(this.value)
}
