boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_enum_template_recursive_data.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
assertion_line: 1274
expression: rendered
---
// Generated by BoltFFI. Do not edit.
/**
 * A recursive expression tree.
 */

sealed class ExprTree {
    /**
     * Leaf value.
     */
    data class Value(val value: Int) : ExprTree()
    /**
     * Recursive addition node.
     */
    data class Add(val left: ExprTree, val right: ExprTree) : ExprTree()
}

fun ExprTree.wireEncodedSize(): Int = 4 + when (this) {
    is ExprTree.Value -> 4
    is ExprTree.Add -> left.wireEncodedSize() + right.wireEncodedSize()
}

fun ExprTree.wireEncodeTo(wire: boltffiWireWriter) {
    when (this) {
        is ExprTree.Value -> {
            wire.writeI32(0)
            wire.writeI32(value)
        }
        is ExprTree.Add -> {
            wire.writeI32(1)
            left.wireEncodeTo(wire)
            right.wireEncodeTo(wire)
        }
    }
}
