boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_jvm_main_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
assertion_line: 797
expression: rendered
---
// Generated by BoltFFI. Do not edit.
package com.example.demo

import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.flow



import com.example.demo.echoI32 as __jvm_echoI32
import com.example.demo.fetchName as __jvm_fetchName

import com.example.demo.boltffi_widget_new as __jvm_class_boltffi_widget_new
import com.example.demo.boltffi_widget_rename as __jvm_class_boltffi_widget_rename
import com.example.demo.boltffi_widget_updates_free as __jvm_class_boltffi_widget_updates_free
import com.example.demo.boltffi_widget_updates_pop_batch as __jvm_class_boltffi_widget_updates_pop_batch
import com.example.demo.boltffi_widget_updates_subscribe as __jvm_class_boltffi_widget_updates_subscribe
import com.example.demo.boltffi_widget_updates_unsubscribe as __jvm_class_boltffi_widget_updates_unsubscribe
import com.example.demo.boltffi_widget_updates_wait as __jvm_class_boltffi_widget_updates_wait



// Generated by BoltFFI. Do not edit.
/**
 * A handle-backed widget.
 */
actual class Widget private constructor(private val handle: Long) {
	internal fun __boltffiHandle(): Long = handle

    /**
     * Creates a widget.
     */
    constructor(name: String) : this(__jvm_class_boltffi_widget_new(name))
    /**
     * Renames the widget.
     */
    fun rename(name: String) = __jvm_class_boltffi_widget_rename(handle, name)
    /**
     * Watches widget updates.
     */
    fun updates(): Flow<Int> = flow {
        val subscription = __jvm_class_boltffi_widget_updates_subscribe(handle)
        if (subscription == 0L) return@flow
        try {
            while (true) {
                val ready = __jvm_class_boltffi_widget_updates_wait(subscription, 50)
                if (ready < 0) break
                val bytes = __jvm_class_boltffi_widget_updates_pop_batch(subscription, 16L) ?: continue
                if (bytes.isEmpty()) {
                    if (ready == 0) continue
                    break
                }
                for (item in boltffiDecodeI32List(bytes)) {
                    emit(item)
                }
            }
        } finally {
            __jvm_class_boltffi_widget_updates_unsubscribe(subscription)
            __jvm_class_boltffi_widget_updates_free(subscription)
        }
    }

}



actual object DemoKmp {
actual fun echoI32(value: Int): Int = __jvm_echoI32(value)

actual suspend fun fetchName(id: Long): String = __jvm_fetchName(id)


}
