boltffi_bindgen/src/render/kmp/snapshots/boltffi_bindgen__render__kmp__templates__tests__snapshot_native_main_template.snap
---
source: boltffi_bindgen/src/render/kmp/templates.rs
expression: rendered
---
// Generated by BoltFFI. Do not edit.
package com.example.demo

import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.flow



import com.example.demo.native.boltffi_echo_i32 as __native_boltffi_echo_i32
import com.example.demo.native.boltffi_fetch_name as __native_boltffi_fetch_name

import com.example.demo.native.boltffi_widget_new as __native_class_boltffi_widget_new
import com.example.demo.native.boltffi_widget_rename as __native_class_boltffi_widget_rename
import com.example.demo.native.boltffi_widget_updates_subscribe as __native_class_boltffi_widget_updates_subscribe
import com.example.demo.native.boltffi_widget_updates_pop_batch as __native_class_boltffi_widget_updates_pop_batch
import com.example.demo.native.boltffi_widget_updates_wait as __native_class_boltffi_widget_updates_wait
import com.example.demo.native.boltffi_widget_updates_unsubscribe as __native_class_boltffi_widget_updates_unsubscribe
import com.example.demo.native.boltffi_widget_updates_free as __native_class_boltffi_widget_updates_free



private fun boltffiReadLeI16(bytes: ByteArray, offset: Int): Short {
    val b0 = bytes[offset].toInt() and 0xFF
    val b1 = bytes[offset + 1].toInt() and 0xFF
    return ((b1 shl 8) or b0).toShort()
}

private fun boltffiReadLeI32(bytes: ByteArray, offset: Int): Int {
    val b0 = bytes[offset].toInt() and 0xFF
    val b1 = bytes[offset + 1].toInt() and 0xFF
    val b2 = bytes[offset + 2].toInt() and 0xFF
    val b3 = bytes[offset + 3].toInt() and 0xFF
    return (b3 shl 24) or (b2 shl 16) or (b1 shl 8) or b0
}

private fun boltffiReadLeI64(bytes: ByteArray, offset: Int): Long {
    var value = 0L
    var shift = 0
    var index = 0
    while (index < 8) {
        val part = bytes[offset + index].toLong() and 0xFFL
        value = value or (part shl shift)
        shift += 8
        index += 1
    }
    return value
}

private fun boltffiDecodeI16List(bytes: ByteArray): List<Short> =
    List(bytes.size / 2) { index -> boltffiReadLeI16(bytes, index * 2) }

private fun boltffiDecodeU16List(bytes: ByteArray): List<UShort> =
    List(bytes.size / 2) { index -> boltffiReadLeI16(bytes, index * 2).toUShort() }

private fun boltffiDecodeI32List(bytes: ByteArray): List<Int> =
    List(bytes.size / 4) { index -> boltffiReadLeI32(bytes, index * 4) }

private fun boltffiDecodeU32List(bytes: ByteArray): List<UInt> =
    List(bytes.size / 4) { index -> boltffiReadLeI32(bytes, index * 4).toUInt() }

private fun boltffiDecodeI64List(bytes: ByteArray): List<Long> =
    List(bytes.size / 8) { index -> boltffiReadLeI64(bytes, index * 8) }

private fun boltffiDecodeU64List(bytes: ByteArray): List<ULong> =
    List(bytes.size / 8) { index -> boltffiReadLeI64(bytes, index * 8).toULong() }

private fun boltffiDecodeF32List(bytes: ByteArray): List<Float> =
    List(bytes.size / 4) { index -> Float.fromBits(boltffiReadLeI32(bytes, index * 4)) }

private fun boltffiDecodeF64List(bytes: ByteArray): List<Double> =
    List(bytes.size / 8) { index -> Double.fromBits(boltffiReadLeI64(bytes, index * 8)) }




// Generated by BoltFFI. Do not edit.
/**
 * A handle-backed widget.
 */
actual class Widget private constructor(private val handle: Long) {
    /**
     * Creates a widget.
     */
    constructor(name: String) : this(__native_class_boltffi_widget_new(name))
    /**
     * Renames the widget.
     */
    fun rename(name: String) = __native_class_boltffi_widget_rename(handle, name)
    /**
     * Watches widget updates.
     */
    fun updates(): Flow<Int> = flow {
        val subscription = __native_class_boltffi_widget_updates_subscribe(handle)
        if (subscription == 0L) return@flow
        try {
            while (true) {
                val ready = __native_class_boltffi_widget_updates_wait(subscription, 50)
                if (ready < 0) break
                val bytes = __native_class_boltffi_widget_updates_pop_batch(subscription, 16L) ?: continue
                if (bytes.isEmpty()) {
                    if (ready == 0) continue
                    break
                }
                for (item in boltffiDecodeI32List(bytes)) {
                    emit(item)
                }
            }
        } finally {
            __native_class_boltffi_widget_updates_unsubscribe(subscription)
            __native_class_boltffi_widget_updates_free(subscription)
        }
    }

}



// Generated by BoltFFI. Do not edit.
private object WidgetEventsHandleMap {
    private val map = mutableMapOf<Long, WidgetEvents>()
    private var nextHandle: Long = 1L

    fun insert(callback: WidgetEvents): Long {
        val handle = nextHandle
        nextHandle += 1L
        map[handle] = callback
        return handle
    }

    fun get(handle: Long): WidgetEvents? = map[handle]

    fun remove(handle: Long): WidgetEvents? = map.remove(handle)
}

object WidgetEventsBridge {
    fun retain(callback: WidgetEvents): Long = WidgetEventsHandleMap.insert(callback)

    fun release(handle: Long) {
        WidgetEventsHandleMap.remove(handle)
    }

    /**
     * Called when widget updates.
     */
    fun on_update(handle: Long, value: Int) {
        val callback = WidgetEventsHandleMap.get(handle) ?: return
        callback.onUpdate(value)
    }


}



actual object DemoKmp {
actual fun echoI32(value: Int): Int = __native_boltffi_echo_i32(value)

actual suspend fun fetchName(id: Long): String = __native_boltffi_fetch_name(id)


}
